# nu_plugin_external_completer_llm

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  shell.nix  test_simple.sh
src/: main.rs
